Force daemonset to use host network

--- a/charts/vector/templates/daemonset.yaml
+++ b/charts/vector/templates/daemonset.yaml
@@ -36,5 +36,6 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
+      hostNetwork: true
       {{- include "vector.pod" . | nindent 6 }}
 {{- end }}
