--- a/charts/vector/templates/ingress.yaml
+++ b/charts/vector/templates/ingress.yaml
@@ -14,6 +14,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ include "vector.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "vector.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
