--- a/charts/vector/templates/secret.yaml
+++ b/charts/vector/templates/secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "vector.fullname" $ }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "vector.labels" $ | nindent 4 }}
 type: Opaque
