--- a/charts/vector/templates/pdb.yaml
+++ b/charts/vector/templates/pdb.yaml
@@ -3,6 +3,7 @@ apiVersion: {{ template "policy.poddisruptionbudget.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "vector.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "vector.labels" . | nindent 4 }}
 spec:
