--- a/charts/vector/templates/serviceaccount.yaml
+++ b/charts/vector/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "vector.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "vector.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
